Logistics - v16 - security and logic - minor corrections
