# src/main/resources/api/openapi.yaml
@@ -3076,41 +3076,6 @@ paths:
         500:
           description: Internal Server Error
 
-  /authenticationInfo/login:
-    post:
-      tags:
-        - AuthenticationInfo
-      summary: Send data for authorization
-      operationId: authenticationInfoSend
-      parameters:
-        - in: header
-          name: auth-token
-          schema:
-            type: string
-      requestBody:
-        description: AuthenticationInfo sending for authorization
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AuthenticationInfoToSend'
-      responses:
-        201:
-          description: AuthenticationInfo was sending successfully
-          content:
-            text/plain:
-              schema:
-                description: username
-                type: string
-                example: john_smith
-        400:
-          description: Bad request
-        401:
-          description: "Unauthorized: Invalid credentials"
-        403:
-          description: "Forbidden: User does not have permissions"
-        500:
-          description: Internal Server Error
 
 
 components:
@@ -3768,15 +3733,3 @@ components:
           type: string
           enum: ["ROLE_ADMIN","ROLE_LOGISTICIAN","ROLE_DRIVER","ROLE_CUSTOMER"]
           default: "ROLE_LOGISTICIAN"
-
-    AuthenticationInfoToSend:
-      description: Object representing AuthenticationInfo to send
-      type: object
-      properties:
-        username:
-          type: string
-          example: john_smith
-        password:
-          type: string
-          example: "$2y$10$HC3hS53J4F3AYApUfV5bbewXBbV3kje5VckyZj/6QrN9RssHasDgC"
-
